--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #only used when not configured in run configuration, dev profile always recommended to save in IDE
 spring.profiles.active=test
 
-server.port=${PORT:8080}
+#server.port=${PORT:9090}
 
 #enable to force https for development
 #server.ssl.key-store-type=PKCS12
@@ -13,10 +13,41 @@ spring.main.allow-bean-definition-overriding=true
 
 server.http2.enabled=true
 
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/alovoa?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
-#spring.datasource.hikari.maximum-pool-size=10
-#spring.datasource.hikari.connectionTimeout=30000
+# PostgreSQL/Supabase database connection
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://${DB_HOST:db.supabase.co}:${DB_PORT:5432}/${DB_NAME:postgres}?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
+spring.datasource.username=${DB_USER:postgres}
+#spring.datasource.password=${DB_PASSWORD:}
+
+# Hibernate Configuration - use create mode to generate schema from entities
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.default_schema=public
+
+# Disable problematic Hibernate metadata operations
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.open-in-view=false
+
+# Minimal connection pool - single connection to avoid prepared statement conflicts
+spring.datasource.hikari.maximum-pool-size=1
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=60000
+# Disable prepared statement caching (critical for Supabase/PostgreSQL)
+spring.datasource.hikari.pool-prepared-statements=false
+spring.datasource.hikari.cache-prep-stmts=false
+spring.datasource.hikari.prepStmtCacheSize=0
+spring.datasource.hikari.prepStmtCacheSqlLimit=0
+spring.datasource.hikari.connection-test-query=SELECT 1
+
+# Connection validation
+
+# Server configuration
 #spring.datasource.hikari.idleTimeout=600000
 #spring.datasource.hikari.maxLifetime=1800000
 
@@ -47,25 +78,22 @@ server.compression.enabled=true
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json,application/xml
 server.compression.min-response-size=10240
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.id.db_structure_naming_strategy=legacy
-spring.jpa.hibernate.ddl-auto=update
+# Removed duplicate configuration settings that conflict with earlier settings
+# All JPA/Hibernate configuration is now consolidated at the top of the file
+spring.jpa.properties.hibernate.type=TRACE
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.plan_cache_max_size=16
 spring.jpa.properties.hibernate.plan_parameter_metadata_max_size=16
 spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
+spring.jpa.properties.hibernate.jdbc.use_prepared_statements=false
 
 ### KEYS AND CREDENTIALS ###
-#spring.datasource.password=
 #spring.datasource.username=
 #keys for transparent database encryption
-#app.text.key= #key must be 16, 24 or 32 bytes long
-#app.text.salt= #salt must be 16 bytes long
-#app.admin.email=
+app.text.key=1234567890123456  # 16-byte default key for testing
+app.text.salt=abcdef1234567890  # 16-byte default salt for testing
+app.admin.email=admin@dmm.com
 #app.admin.key=
 #spring.mail.password=<login password to smtp server>
 spring.mail.host=mail.gmx.net
@@ -76,11 +104,20 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.test-connection=true
 spring.mail.properties.mail.smtp.ssl.checkserveridentity=false
 
+# Frontend URL for login/register navigation
+app.url.front-end=/login
+
+supabase.url=${SUPABASE_URL}
+supabase.key=${SUPABASE_KEY}
+# Set these via environment variables for security, e.g., export SUPABASE_URL=your-supabase-url
+# and SUPABASE_KEY=your-supabase-anon-key. Use Supabase dashboard for values.
+
 # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=ERROR
-logging.level.org.hibernate=ERROR
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate=DEBUG
 logging.file.name=./logs/spring.log
 
 #bucket4j
@@ -285,7 +322,8 @@ app.prompt.length.max=120
 app.donation.modulus=10
 app.url.auth.success=/
 app.url.auth.failure=/?auth-error
-app.url.front-end=http://localhost:8081
+# Using the same value as defined at the top of the file
+app.url.front-end=/login
 
 #24 hours
 app.user.delete.duration.valid=86400000
@@ -304,3 +342,12 @@ app.schedule.delay.captcha=300000
 app.schedule.delay.hide=9720000000
 #14 days
 app.schedule.delay.user.cleanup=1209600000
+
+# Disable auto-configurations causing startup issues
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mail.MailSenderAutoConfiguration,org.springframework.boot.autoconfigure.mail.MailSenderValidatorAutoConfiguration
+
+# More detailed debugging
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.nonononoki.alovoa=DEBUG
+logging.level.org.springframework.web=DEBUG
